# Snake

./: .gitignore  CMakeLists.txt  README.md  Snakes.sln  Snakes.vcxproj  Snakes.vcxproj.filters
src/: Game.cpp  Game.h  Scores.cpp  Scores.h  Snake.cpp  Snake.h  Utils.cpp  Utils.h  main.cpp
